fix: scrollbar hidden ms, moz

--- a/src/styles/utility.css
+++ b/src/styles/utility.css
@@ -1,4 +1,7 @@
 @utility scrollbar-hidden {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+
   &::-webkit-scrollbar {
     display: none;
   }
